--- a/css.css
+++ b/css.css
@@ -1,19 +1,3 @@
-#i1{
-	width: 50px;
-	height: 50px;
-	position: absolute;
-	top: 0px;
-	left:0px;
-	background: #ccc;
-	transition: all easy 4s ;
-}
-
-#gcc{
-	width: 1300px;
-	height: 600px;
-	position:fixed;
-	top: 0px;
-	left:0px;
-	border: 1px solid black;
-	transition: all 4s easy;
+body{
+	margin:0px;
 }
